{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "6e37c558-df62-4370-9c50-46097c92781b",
            "actions": [
                {
                    "name": "MoveController",
                    "type": "Value",
                    "id": "eb141082-741e-4d8d-99d1-1add9b189726",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveKeyBoard",
                    "type": "Value",
                    "id": "4b268091-6b9d-41fa-b1ad-111f01abd1f2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SwapCharacterController",
                    "type": "Button",
                    "id": "df7e037b-efc7-43f5-8e5f-4610907c15d7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwapCharacterKeyBoard",
                    "type": "Button",
                    "id": "61280b6c-f5b0-436d-a461-3e8212f6ae79",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "InteractController",
                    "type": "Button",
                    "id": "51181610-7b08-411d-ad49-22c82858a59c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "InteractKeyBoard",
                    "type": "Button",
                    "id": "55af5dab-91f5-4d6d-a927-36c429db500d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8d79fd36-880d-4059-9982-42e83b6044eb",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveController",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "90a03b42-d9be-4fb9-9bf4-7a45a4debe62",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveKeyBoard",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "74064468-ffc2-44f7-9d71-92e4f29cc976",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveKeyBoard",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "3fb035cc-0699-4b8b-b517-25d8f9bc8f7f",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveKeyBoard",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "65f1c5e8-3aaa-4be3-925b-fc4068adc3b5",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveKeyBoard",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "fbaa8748-1574-42b7-b03a-8f5cd06511e6",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveKeyBoard",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c388ad71-4d14-4ae8-ab82-afba0dc42c0d",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwapCharacterController",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b36784c5-db78-4245-ad05-07e3ac0f7841",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwapCharacterKeyBoard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9019ad3d-aa78-4cc8-b3d3-e4595b781e6d",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InteractController",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ff69037d-744f-4b3e-b473-05f0fa316652",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InteractKeyBoard",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}